# dspy_system_admin

./: CLAUDE.md  install.sh  pyproject.toml
config/: sudoers-sysadmin  sysadmin.service  sysadmin.sudoers  wifi-watchdog-fast.service  wifi-watchdog.service
sysadmin/: __init__.py  __main__.py  agent.py  audit.py  cli.py  constants.py  dataset.py  executor.py  monitor.py  optimize.py  signatures.py  watchdog.py
tests/: __init__.py  test_agent.py  test_executor.py  test_monitor.py  test_signatures.py
